# automate_lab2

./: CMakeLists.txt  lab2.manifest.yaml  lab2_new.cpp  lab2_new.vcxproj  lab2_new.vcxproj.filters
automates_classes/: Automate.h
automates_classes/mealy_automate/: MealyAutomate.cpp  MealyAutomate.h
automates_classes/moore_automate/: MooreAutomate.cpp  MooreAutomate.h
functions/: Functions.cpp  Functions.h
x64/Debug/: lab2_new.exe.recipe  lab2_new.ilk  vc143.idb
x64/Debug/lab2_new.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  lab2_new.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
